Socket del WTS y Engine operativo y funcional.

--- a/FWQ/FWQ_Engine/Properties/launchSettings.json
+++ b/FWQ/FWQ_Engine/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FWQ_Engine": {
       "commandName": "Project",
-      "commandLineArgs": "Engine.exe localhost 9001 20 172.20.43.201 9001"
+      "commandLineArgs": "Engine.exe localhost 9001 20 localhost 9001"
     }
   }
 }
