--- a/FWQ/FWQ_Visitor/FWQ_Visitor.csproj
+++ b/FWQ/FWQ_Visitor/FWQ_Visitor.csproj
@@ -10,6 +10,9 @@
     <Compile Update="CrearPerfil.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="IniciarSesion.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
