--- a/FWQ/FWQ_Visitor/FWQ_Visitor.csproj
+++ b/FWQ/FWQ_Visitor/FWQ_Visitor.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="CrearPerfil.cs">
       <SubType>Form</SubType>
     </Compile>
