Kafka funciona WTS, Sensor, Engine y Visitor

--- a/FWQ/FWQ_Visitor/Properties/launchSettings.json
+++ b/FWQ/FWQ_Visitor/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FWQ_Visitor": {
       "commandName": "Project",
-      "commandLineArgs": "FWQ_Visitor 192.168.56.18 9000 localhost 9010"
+      "commandLineArgs": "FWQ_Visitor localhost 9092 localhost 9010"
     }
   }
 }
